header: fix spacings

--- a/webapp/src/components/ProgressBar/properties.css
+++ b/webapp/src/components/ProgressBar/properties.css
@@ -6,7 +6,7 @@
   --wrapper-background-color: var(--color-grey-60);
   --progressbar-background-color: var(--color-greenish);
 
-  --steps-margin: 22px;
+  --steps-margin: 0 0 22px;
   --step-font-family: var(--primary-font-family);
   --step-font-size: var(--font-size-small);
   --step-color: var(--color-grey-30);
