--- a/webapp/src/components/ProgressBar/styles.css
+++ b/webapp/src/components/ProgressBar/styles.css
@@ -13,7 +13,7 @@
 }
 
 .steps {
-  margin-bottom: var(--steps-margin);
+  margin: var(--steps-margin);
 }
 
 .step {
